# simple_rag

./: .gitignore  Makefile  README.md  docker-compose.yaml  project_structure.md
airflow/: Dockerfile  README.md  pyproject.toml  test_ingest_docs.py
airflow/dags/: ingest_docs.py
airflow/tests/: test_ingest_docs.py
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/core/: auth.py  config.py
backend/app/db/: models.py
backend/app/services/: rag_chain.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_db.py  test_main.py  test_rag_chain.py
enterprise-mocks/: Dockerfile  README.md  app.py  pyproject.toml  secrets.json  test_app.py
evaluation/: README.md  benchmark_ragas.py  locustfile.py  pyproject.toml  qa_dataset.json
frontend/: Dockerfile  app.py  pyproject.toml
model-server/: Dockerfile  README.md  main.py  pyproject.toml
test_results/: airflow_report.xml  backend_report.xml  worker_report.xml
worker/: Dockerfile  README.md  ingest.py  pyproject.toml  test_ingest.py
worker/app/: __init__.py  processor.py
worker/app/parsers/: cleaner_parser.py  layout_parser.py
worker/app/readers/: __init__.py  docling_pdf_reader.py  langchain_pdf_reader.py  unstructured_pdf_reader.py
worker/app/splitters/: __init__.py  recursive_splitter.py
worker/tests/: test_ingest.py
