[project]
name = "airflow-dags"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain==0.1.13",
    "langchain-community==0.0.29",
    "langchain-openai==0.1.1",
    "langchain-postgres==0.0.3",
    "pypdf==4.1.0",
    "psycopg2-binary==2.9.9"

]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
[tool.pytest.ini_options]
pythonpath = [".."]