[project]
name = "simple-rag-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.5.2",
    "pydantic-settings==2.1.0",
    "httpx==0.25.2",
    "sqlalchemy==2.0.23",
    "asyncpg==0.29.0",
    "psycopg[binary]==3.1.18",
    "greenlet==3.0.1",
    "langchain==0.1.13",
    "langchain-community==0.0.29",
    "langchain-openai==0.1.1",
    "langchain-postgres==0.0.3"
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "aiosqlite>=0.20.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
