[project]
name = "simple-rag-evaluation"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ragas",
    "pandas",
    "datasets",
    "langchain",
    "langchain-openai",
    "langchain-postgres",
    "psycopg2-binary",
    "langchain-community<0.3.0",
    "pydantic-settings",
    "httpx",
    "sqlalchemy"
]

[dependency-groups]
dev = [
    "locust>=2.14.2",
]
