[project]
name = "simple-rag-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain==0.1.13",
    "langchain-community==0.0.29",
    "langchain-openai==0.1.1",
    "langchain-postgres==0.0.3",
    "pypdf==4.1.0",
    "psycopg2-binary==2.9.9",
    "psycopg[binary]==3.1.18"
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
